add VerifyRegister method
